Warning on Ledger device

--- a/app/components/wallet/warning-dialogs/BaseWarningDialog.scss
+++ b/app/components/wallet/warning-dialogs/BaseWarningDialog.scss
@@ -1,4 +1,4 @@
-@import '../../themes/mixins/underline';
+@import '../../../themes/mixins/underline';
 
 :global(.YoroiModern) .component {
   min-width: var(--theme-modal-min-max-width-cmn);
