--- a/app/components/wallet/staking/dashboard/UserSummary.scss
+++ b/app/components/wallet/staking/dashboard/UserSummary.scss
@@ -10,6 +10,10 @@
     padding: 20px 24px;
     flex: 1;
     border-right: 1px solid var(--theme-dashboard-card-vertical-separator-color);
+
+    .sectionActions {
+        flex: 1;
+    }
 }
 
 .header {
@@ -70,7 +74,6 @@
     font-size: 12px;
     line-height: 14px;
     color: var(--theme-dashboard-link-color);
-    float: right;
     margin-left: auto;
     margin-right: 0px;
     width: max-content;
