--- a/app/components/widgets/options/OptionBlock.scss
+++ b/app/components/widgets/options/OptionBlock.scss
@@ -133,6 +133,9 @@
           &.cardano {
             background-image: url(../../../assets/images/my-wallets/symbol_ada.inline.svg);
           }
+          &.cardanoTestnet {
+            background-image: url(../../../assets/images/my-wallets/symbol_adaTestnet.inline.svg);
+          }
           &.ergo {
             background-image: url(../../../assets/images/my-wallets/symbol_ergo.inline.svg);
           }
@@ -195,6 +198,9 @@
         .optionImage {
           &.cardano {
             background-image: url(../../../assets/images/my-wallets/symbol_ada.inline.svg);
+          }
+          &.cardanoTestnet {
+            background-image: url(../../../assets/images/my-wallets/symbol_adaTestnet.inline.svg);
           }
           &.ergo {
             background-image: url(../../../assets/images/my-wallets/symbol_ergo.inline.svg);
