--- a/app/components/widgets/CustomTooltip.scss
+++ b/app/components/widgets/CustomTooltip.scss
@@ -6,7 +6,7 @@
     flex: 1;
   }
   
-  .SimpleTooltip {
+  .SimpleCenteredTooltip {
     
     div[data-bubble-container] {
       transform: translate(-50%, 0); // center the tooltip no matter how long is the text inside
