--- a/app/components/wallet/transactions/_categoryData.scss
+++ b/app/components/wallet/transactions/_categoryData.scss
@@ -7,8 +7,8 @@ $type-align: left;
 $status-width: 87px;
 $status-align: center;
 
-$min-fee-width: 80px; // fits 2-digit ADA fees
+$min-fee-width: 80px; // fits 2-digit fees
 $fee-align: right;
 
-$min-amount-width: 191px; // fits 1 billion ADA
+$min-amount-width: 191px; // fits 16 digits
 $amount-align: right;
