--- a/app/components/wallet/transactions/Transaction.scss
+++ b/app/components/wallet/transactions/Transaction.scss
@@ -60,6 +60,7 @@
   }
   .typeAddress{
     min-width: fit-content;
+    height: fit-content;
     width: 105px;
     background: var(--cmn-default-color-grey-5);
     font-size: 10px;
