--- a/app/components/wallet/staking/dashboard/UserSummary.scss
+++ b/app/components/wallet/staking/dashboard/UserSummary.scss
@@ -2,82 +2,101 @@
 @import '../../../../themes/mixins/unordered-list';
 
 .wrapper {
-    display: flex;
-    height: 100%;
+  display: flex;
+  height: 100%;
 }
 
-.column {
-    padding: 20px 24px;
+.card {
+  padding: 20px 20px;
+  flex: 1;
+  border-radius: 6px;
+  box-shadow: 0px 0px 7px 3px var(--theme-dashboard-card-shadow-color);
+  position: relative;
+  overflow: hidden;
+  .sectionActions {
     flex: 1;
-    border-right: 1px solid var(--theme-dashboard-card-vertical-separator-color);
+    margin-top: 15px;
 
-    .sectionActions {
-        flex: 1;
+    button {
+      width: 50%;
     }
+  }
+
+  .icon {
+    position: absolute;
+    right: -30px;
+    bottom: -15px;
+  }
 }
 
-.header {
-    margin-bottom: 19.5px;
-    display: flex;
-    justify-content: flex-end;
+.mangledSection {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+  .mangledWarningIcon {
+    height: fit-content;
+    cursor: pointer;
+  }
+  .mangledPopup {
+    @include unordered-list;
 
-    .icon {
-        margin-right: auto;
-        width: 44px;
-        height: 44px;
-        margin-bottom: 11px;
+    p,
+    ul {
+      font-family: var(--font-regular);
+      color: var(--cmn-default-color-grey-6);
+      font-size: 14px;
+      line-height: 22px;
+
+      .link {
+        @include underline(var(--theme-dashboard-link-color));
+      }
     }
 
-    .mangledWarningIcon {
-        height: fit-content;
-        cursor: pointer;
+    ul {
+      margin-top: 8px;
+      margin-bottom: 8px;
     }
-
-    .mangledPopup {
-        margin-top: calc(24px + 5px);
-        @include unordered-list;
-
-        p, ul {
-            font-family: var(--font-regular);
-            color: var(--cmn-default-color-grey-6);
-            font-size: 14px;
-            line-height: 22px;
-
-            .link {
-                @include underline(var(--theme-dashboard-link-color));
-            }
-        }
-
-        ul {
-            margin-top: 8px;
-            margin-bottom: 8px;
-        }
-    }
+  }
 }
 
 .label {
-    color: var(--theme-dashboard-label-color);
-    font-size: 14px;
-    line-height: 22px;
-    margin-bottom: 1px;
-    width: max-content;
+  color: var(--theme-dashboard-label-color);
+  font-size: 14px;
+  line-height: 22px;
+  margin-bottom: 1px;
+  width: max-content;
 }
 
 .value {
-    font-family: var(--font-medium);
-    font-size: 18px;
-    line-height: 22px;
+  font-size: 30px;
+  line-height: 45px;
+
+  .decimal {
+    font-size: 24px;
+  }
 }
 
 .note {
-    margin-top: 12px;
-    font-size: 12px;
-    line-height: 14px;
-    color: var(--theme-dashboard-link-color);
-    margin-left: auto;
-    margin-right: 0px;
-    width: max-content;
-    &:hover {
-        @include underline(var(--theme-dashboard-link-color));
-    }
+  margin-top: 12px;
+  font-size: 12px;
+  line-height: 14px;
+  color: var(--theme-dashboard-link-color);
+  margin-left: auto;
+  margin-right: 0px;
+  width: max-content;
+  &:hover {
+    @include underline(var(--theme-dashboard-link-color));
+  }
+}
+
+.amountNote {
+  margin-top: 12px;
+  font-size: 12px;
+  line-height: 8px;
+  color: var(--theme-dashboard-link-color);
+  width: max-content;
+}
+
+.mr20 {
+  margin-right: 20px;
 }
