--- a/app/components/wallet/staking/dashboard/UpcomingRewards.scss
+++ b/app/components/wallet/staking/dashboard/UpcomingRewards.scss
@@ -1,123 +1,135 @@
 @import '../../../../themes/mixins/underline';
 
 .wrapper {
-    display: flex;
-    min-height: 143px;
+  display: flex;
+  min-height: 143px;
+}
+
+.epochCards {
+  :not(:last-child) {
+    margin-right: 10px;
+  }
 }
 
 .column {
-    padding: 24px 24px;
-    flex: 1;
-    border-right: 1px solid var(--theme-dashboard-card-vertical-separator-color);
+  padding: 24px 24px;
+  flex: 1;
+  border-right: 1px solid var(--theme-dashboard-card-vertical-separator-color);
 }
 
 .card {
-    padding: 20px 20px;
-    flex: 1;
-    border-radius: 6px;
-    background-color: #F8F8F8;
+  padding: 20px 20px;
+  flex: 1;
+  border-radius: 6px;
+  background-color: #f8f8f8;
 
-    .sectionActions {
-        flex: 1;
-    }
+  .sectionActions {
+    flex: 1;
+  }
 }
 
 .loading {
-    position: relative;
-    transform: translateY(50%);
-    margin: auto auto;
+  position: relative;
+  transform: translateY(50%);
+  margin: auto auto;
 }
 
 .icon {
-    width: 44px;
-    height: 44px;
-    margin-bottom: 11px;
+  width: 44px;
+  height: 44px;
+  margin-bottom: 11px;
 }
 
 .header {
-    margin-bottom: 19.5px;
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
+}
 
-    .label {
-        margin-right: auto;
-        color: var(--theme-dashboard-label-color);
-        font-family: var(--font-regular);
-        font-size: 14px;
-        line-height: 22px;
-    }
+.label {
+  margin-right: auto;
+  color: var(--theme-dashboard-label-color);
+  font-family: var(--font-regular);
+  font-size: 14px;
+  line-height: 22px;
 }
 
 .time {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 8px;
+
+  .broad {
+
+    .monthDay {
+      margin-right: 4px;
+      width: max-content;
+    }
+  }
+
+  .specific {
     display: flex;
     flex-wrap: wrap;
-    margin-top: -10px;
+    margin-top: 8px;
 
-    .broad {
-        margin-top: 10px;
-
-        .monthDay {
-            margin-right: 4px;
-            width: max-content;
-        }
+    .timer {
+      margin-right: 4px;
+      margin-top: -1px;
     }
 
-    .specific {
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 8px;
-
-        .timer {
-            margin-right: 4px;
-            margin-top: -1px;
-        }
-
-        .ampm {
-            margin-top: 2px;
-        }
+    .ampm {
+      margin-top: 2px;
     }
+  }
 }
 
 .noDelegation {
-    background-color: var(--theme-dashboard-card-nodelegation-background-color);
+  background-color: var(--theme-dashboard-card-nodelegation-background-color);
 
-    .message {
-        height: 53px;
-        color: var(--cmn-default-color-grey-6);
-        font-family: var(--font-regular);
-        font-size: 12px;
-        line-height: 18px;
+  .message {
+    height: 53px;
+    color: var(--cmn-default-color-grey-6);
+    font-family: var(--font-regular);
+    font-size: 12px;
+    line-height: 18px;
 
-        text-align: center;
-    }
+    text-align: center;
+  }
 }
 
 .pools {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 5px;
+
+  :not(:last-child) {
+    margin-right: 10px;
+  }
+
+  .poolBox {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 1px;
-
-    :not(:last-child) {
-        margin-right: 10px;
-    }
-
+    align-items: center;
     .avatar {
-        margin-top: 10px;
-        width: 24px;
-        height: 24px;
-        border-radius: 4px;
-        border: 1px solid rgba(111, 114, 144, 0.24);
+      width: 24px;
+      height: 24px;
+      border-radius: 4px;
+      border: 1px solid rgba(111, 114, 144, 0.24);
     }
+  }
 }
 
 .poolInfo {
-    padding: 4px 0px;
-    font-family: var(--font-light);
-    color: var(--theme-dashboard-tooltip-text-color);
-    font-size: 11px;
-    line-height: 14px;
+  padding: 4px 0px;
+  font-family: var(--font-light);
+  color: var(--theme-dashboard-tooltip-text-color);
+  font-size: 11px;
+  line-height: 14px;
 }
 
 .mr15 {
-    margin-right: 15px;
+  margin-right: 15px;
+}
+
+.mt20 {
+    margin-top: 20px;
 }
