--- a/app/components/wallet/staking/dashboard/UserSummary.scss
+++ b/app/components/wallet/staking/dashboard/UserSummary.scss
@@ -4,6 +4,7 @@
 .wrapper {
   display: flex;
   height: 100%;
+  flex-wrap: wrap;
 }
 
 .card {
@@ -13,6 +14,10 @@
   box-shadow: 0px 0px 7px 3px var(--theme-dashboard-card-shadow-color);
   position: relative;
   overflow: hidden;
+  min-width: 342px;
+  max-width: 342px;
+  min-height: 164px;
+  margin-bottom: 10px;
 
   .cardContent {
     height: 100%;
@@ -27,12 +32,13 @@
       align-items: center;
       justify-content: space-between;
       margin-top: 8px;
+      flex-wrap: wrap;
       .actionButton {
         height: 46px;
         width: 144px;
       }
       .note {
-        color: #6B7384;
+        color: #6b7384;
       }
     }
   }
@@ -94,37 +100,76 @@
 
 .wrapperCard {
   flex: 1;
-  
-  .card {
+  min-width: 342px;
+  max-width: 342px;
+  min-height: 164px;
+  margin-bottom: 10px;
+  position: relative;
+
+  .subCard {
     height: 100%;
+    padding: 20px 20px;
+    flex: 1;
+    border-radius: 6px;
+    box-shadow: 0px 0px 7px 3px var(--theme-dashboard-card-shadow-color);
+    position: relative;
+    overflow: hidden;
+
+    .cardContent {
+      height: 100%;
+      position: relative;
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      .delegatedHeader {
+        display: flex;
+        align-items: center;
+      }
+
+      .label {
+        margin-right: 10px;
+      }
+    }
+
+    .icon {
+      position: absolute;
+      right: -30px;
+      bottom: -15px;
+      z-index: 0;
+    }
   }
+
 
   .popupSection {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 
     .mangledPopup {
-
-      margin-top: -50px;
-      margin-right: 20px;
       @include unordered-list;
-  
+
       p,
       ul {
         font-family: var(--font-regular);
         color: var(--cmn-default-color-grey-6);
         font-size: 14px;
         line-height: 22px;
-  
+
         .link {
           @include underline(var(--theme-dashboard-link-color));
         }
       }
-  
+
       ul {
         margin-top: 8px;
         margin-bottom: 8px;
       }
     }
   }
+}
+
+.loadingSpinner {
+  width: 22px;
+  margin-top: 5px;
 }
