--- a/app/components/mixins/card-mixin.scss
+++ b/app/components/mixins/card-mixin.scss
@@ -10,6 +10,8 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
   margin: 0 8px;
   box-shadow: 0 5px 20px 0px rgba(24,26,30, .08);
   margin-bottom: 15px;
@@ -27,10 +29,17 @@
     display: flex;
     justify-content: center;
     letter-spacing: -0.03em;
+    line-height: 22px;
 
     .tooltip {
       margin-left: 3px;
       margin-top: 2px;
     }
+  }
+
+  .heroCardsItemDate {
+    color: #6B7384;
+    font-size: 12px;
+    line-height: 20px;
   }
 }
