--- a/app/components/transfer/cards/TransferTypeSelect.scss
+++ b/app/components/transfer/cards/TransferTypeSelect.scss
@@ -9,10 +9,28 @@
   }
 
   .instructions {
-    margin-top: 143px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
     font-family: var(--font-regular);
-    font-size: 16px;
-    line-height: 19px;
+    font-size: 14px;
+    line-height: 30px;
     color: var(--cmn-default-color-grey);
+
+    span {
+      color: #6B7384;
+      a {
+        text-decoration: none;
+        color: #3154CB;
+      }
+    } 
+    
+    .headerText {
+      max-width: 421px;
+      font-size: 24px;
+      text-align: center;
+      margin-bottom: 12px;
+    }
   }
 }
