--- a/chrome/views/sign.html
+++ b/chrome/views/sign.html
@@ -1,8 +1,9 @@
 <html>
     <script src="sign.js"></script>
     <body>
-        <div id="tx-info"></div>
-        <button id="tx-sign">Sign</button>
+        <div id="tx-info"></div><br>
+        Password: <input type="password" id="pw-entry"></input><br>
+        <button id="tx-sign">Sign</button><br>
         <button id="tx-cancel">Cancel</button>
     </body>
 </html>
