fix tab icons and dashboard card shadow

--- a/app/components/wallet/staking/dashboard/CardShadow.scss
+++ b/app/components/wallet/staking/dashboard/CardShadow.scss
@@ -15,6 +15,6 @@
     background-color: var(--theme-main-body-background-color);
     flex: 1;
     border-radius: 6px;
-    box-shadow: 0 10px 20px 0 var(--theme-dashboard-card-shadow-color);
+    box-shadow: 0 3px 10px 2px var(--theme-dashboard-card-shadow-color);
     border: 1px solid var(--theme-dashboard-card-border-color);
 }
