--- a/chrome/views/connect.html
+++ b/chrome/views/connect.html
@@ -5,7 +5,6 @@
         <button id="connect">Connect</button>
         <button id="cancel">Cancel</button>
         <p>Which accounts would you like to connect with?</p>
-        <input type="checkbox">Wallet 1</input><br>
-        <input type="checkbox">Wallet 2</input><br>
+        <div id ="account-list"></div>
     </body>
 </html>
