--- a/app/components/topbar/NavDropdownContent.scss
+++ b/app/components/topbar/NavDropdownContent.scss
@@ -10,5 +10,12 @@
 }
 
 .buttonWrapper {
-  padding: 32px 74px;
+  display: flex;
+  padding: 23px 32px;
+
+  justify-content: flex-end;
+
+  .buyButton {
+    margin-right: 24px;
+  }
 }
