fix layout styles and connect page

--- a/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/app/ergo-connector/components/connect/ConnectPage.scss
@@ -76,4 +76,8 @@
 .errorMessage {
   color: var(--rp-formfield-error-text-color, rgba(222, 50, 38, 0.5));
   padding: 10px 0;
+  p {
+    margin-top: 10px;
+    overflow-wrap: break-word;
+  }
 }
