--- a/app/ergo-connector/components/layout/Layout.scss
+++ b/app/ergo-connector/components/layout/Layout.scss
@@ -16,6 +16,7 @@
   padding-left: 32px;
   & .menuIcon {
     margin-right: 80px;
+    cursor: pointer;
   }
   & .menu {
     color: #fff;
@@ -29,8 +30,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      font-size: 16px;
-      font-family: Rubik;
       font-size: 16px;
       font-weight: 500;
       letter-spacing: 0;
