--- a/app/ergo-connector/components/layout/Layout.scss
+++ b/app/ergo-connector/components/layout/Layout.scss
@@ -5,6 +5,7 @@
   border-radius: 2px;
   background-color: #f0f3f5;
   box-shadow: 0 2px 5px 3px rgba(0, 0, 0, 0.06);
+  font-family: Rubik Regular;
 }
 
 .header {
