add intl and flow

--- a/app/ergo-connector/components/signin/SignTxPage.scss
+++ b/app/ergo-connector/components/signin/SignTxPage.scss
@@ -42,10 +42,13 @@
     font-weight: 700;
     margin-bottom: 3px;
   }
-  .stablecoins,
   .tokens {
     color: #242838;
     font-size: 14px;
+    margin-bottom: 3px;
+  }
+  .amountRow {
+    margin-bottom: 9px;
   }
 }
 
