--- a/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/app/ergo-connector/components/connect/ConnectPage.scss
@@ -62,6 +62,7 @@
     color: #6b7384;
     font-size: 12px;
     margin-bottom: 32px;
+    line-height: 20px;
   }
   & .wrapperBtn {
     display: flex;
