--- a/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/app/ergo-connector/components/connect/ConnectPage.scss
@@ -58,7 +58,7 @@
   padding-left: 32px;
   padding-right: 32px;
 
-  p {
+  .infoText {
     color: #6b7384;
     font-size: 12px;
     margin-bottom: 32px;
