--- a/app/themes/overrides/FormFieldOverrides.scss
+++ b/app/themes/overrides/FormFieldOverrides.scss
@@ -11,10 +11,8 @@
   margin: 0;
   line-height: 1.33;
   font-size: 12px;
-
-  & + label {
-    color: var(--rp-theme-color-error);
-  }
+  color: var(--rp-theme-color-error);
+  font-family: var(--rp-theme-font-regular);
 }
 
 .label {
