--- a/app/themes/overrides/FormFieldOverridesClassic.scss
+++ b/app/themes/overrides/FormFieldOverridesClassic.scss
@@ -12,8 +12,6 @@
   margin: 0;
   line-height: 1.33;
   font-size: 12px;
-
-  & + label {
-    color: var(--rp-theme-color-error);
-  }
+  color: var(--rp-theme-color-error);
+  font-family: var(--rp-theme-font-regular);
 }
