--- a/app/components/wallet/voting/common.scss
+++ b/app/components/wallet/voting/common.scss
@@ -15,6 +15,10 @@ $opacityCommon: 0.7;
   font-size: 14px;
 }
 
+.importantText {
+  color: #ff1351 !important;
+}
+
 .lastItem {
   margin-top: 32px;
   margin-bottom: 34px !important;
