--- a/app/components/buySell/BuySellDialog.scss
+++ b/app/components/buySell/BuySellDialog.scss
@@ -18,6 +18,8 @@
   font-family: var(--font-regular);
   font-size: 16px;
   flex-direction: column;
+  letter-spacing: 0;
+  line-height: 22px;
 }
 
 .row {
