fix offset in inputs

--- a/app/themes/overrides/InputOverrides.scss
+++ b/app/themes/overrides/InputOverrides.scss
@@ -10,4 +10,9 @@
   &.errored:hover {
     border-color: var(--rp-input-border-color-errored);
   }
+
+  &[type="password"] {
+    // react-polymorph adds a padding-top for some Daedalus specific handling of password fields
+    padding-top: 0px;
+  }
 }
