add progress bar ui in connect and signin page

--- a/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/app/ergo-connector/components/connect/ConnectPage.scss
@@ -1,6 +1,6 @@
 .connectWrapper {
-  margin-top: 44px;
-  margin-bottom: 64px;
+  padding-top: 44px;
+  padding-bottom: 64px;
   display: flex;
   flex-direction: column;
   align-items: center;
