--- a/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/app/ergo-connector/components/connect/ConnectPage.scss
@@ -1,6 +1,6 @@
 .connectWrapper {
-  margin-top: 44px;
-  margin-bottom: 64px;
+  padding-top: 44px;
+  padding-bottom: 64px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,12 +13,6 @@
     justify-content: center;
     align-items: center;
     background-color: #f8f8f8;
-
-    img {
-      display: block;
-      width: 35px;
-      height: 35px;
-    }
   }
   & .title {
     text-align: center;
