--- a/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/app/ergo-connector/components/connect/ConnectPage.scss
@@ -18,7 +18,7 @@
     text-align: center;
     margin-top: 8px;
     font-size: 18px;
-    font-weight: 600;
+    font-family: var(--font-medium);
     h2 {
       margin-bottom: 6px;
     }
