--- a/packages/yoroi-extension/app/ergo-connector/components/layout/Layout.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/layout/Layout.scss
@@ -5,7 +5,7 @@
   border-radius: 2px;
   background-color: #f0f3f5;
   box-shadow: 0 2px 5px 3px rgba(0, 0, 0, 0.06);
-  font-family: Rubik Regular;
+  font-family: var(--font-regular);
 }
 
 .header {
@@ -38,7 +38,7 @@
       h3 {
         margin-top: 0;
         margin-bottom: 2px;
-        font-weight: 500;
+        font-family: var(--font-medium);
         line-height: 19px;
         letter-spacing: 0;
       }
