--- a/packages/yoroi-extension/app/ergo-connector/components/SupportPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/SupportPage.scss
@@ -1,5 +1,8 @@
 .component {
   padding: 40px 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   color: #6b7384;
   svg {
@@ -15,5 +18,17 @@
   p {
     margin-bottom: 24px;
     font-size: 12px;
+  }
+  .link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    height: 40px;
+    width: 190px;
+    border-radius: 8px;
+    background-color: var(--theme-button-primary-background-color);
+    color: var(--theme-button-primary-text-color);
+    text-transform: uppercase;
   }
 }
