--- a/packages/yoroi-extension/app/ergo-connector/components/SupportPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/SupportPage.scss
@@ -27,6 +27,7 @@
     height: 40px;
     width: 190px;
     border-radius: 8px;
+    font-family: var(--font-medium);
     background-color: var(--theme-button-primary-background-color);
     color: var(--theme-button-primary-text-color);
     text-transform: uppercase;
