--- a/packages/yoroi-extension/app/ergo-connector/components/layout/SettingLayout.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/layout/SettingLayout.scss
@@ -1,6 +1,5 @@
 .layout {
-  max-width: 466px;
-  width: 100%;
+  min-height: 100vh;
   padding-bottom: 40px;
   border-radius: 2px;
   background-color: #f0f3f5;
