--- a/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
@@ -1,3 +1,8 @@
+.component {
+  height: calc(100vh - 92px);
+  display: flex;
+  flex-direction: column;
+}
 .connectWrapper {
   padding-top: 44px;
   padding-bottom: 64px;
@@ -29,6 +34,7 @@
 }
 
 .list {
+  flex: 1;
   padding: 0 32px 17px;
   border-bottom: 1px solid #dce0e9;
   & .listItem {
