remove scroll bar when warning banner exist

--- a/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
@@ -2,6 +2,9 @@
   height: calc(100vh - 92px);
   display: flex;
   flex-direction: column;
+  &.isNightly {
+    height: calc(100vh - 138px);
+  }
 }
 .connectWrapper {
   padding-top: 44px;
