add favicon from the url in connecting page (#1988)

--- a/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
@@ -21,6 +21,9 @@
     justify-content: center;
     align-items: center;
     background-color: #f8f8f8;
+    img {
+      width: 20px;
+    }
   }
   & .title {
     text-align: center;
