warn if not delegated

--- a/packages/yoroi-extension/app/components/wallet/voting/Voting.scss
+++ b/packages/yoroi-extension/app/components/wallet/voting/Voting.scss
@@ -86,4 +86,9 @@
     text-align: center;
     margin-bottom: 32px;
   }
+
+  .delegationStatus {
+    text-align: center;
+    margin-bottom: 32px;
+  }
 }
