Reworked the tab-icons CSS to handle new transactions icon in the same way as others. Fixed the voting icon coloring on being selected as well.

--- a/packages/yoroi-extension/app/components/wallet/navigation/WalletNavButton.scss
+++ b/packages/yoroi-extension/app/components/wallet/navigation/WalletNavButton.scss
@@ -31,6 +31,9 @@
     & > svg > path {
       fill: var(--theme-wallet-navigation-tab-text-color-active);
     }
+    & > svg > g {
+      stroke: var(--theme-wallet-navigation-tab-text-color-active);
+    }
   }
 }
 
