Updated the CSS for new transactions icon a bit to make it more generic than targeting `strong` property in all `g` tags

--- a/packages/yoroi-extension/app/components/wallet/navigation/WalletNavButton.scss
+++ b/packages/yoroi-extension/app/components/wallet/navigation/WalletNavButton.scss
@@ -28,11 +28,11 @@
   }
 
   .icon {
+    & > svg {
+      color: var(--theme-wallet-navigation-tab-text-color-active);
+    }
     & > svg > path {
       fill: var(--theme-wallet-navigation-tab-text-color-active);
-    }
-    & > svg > g {
-      stroke: var(--theme-wallet-navigation-tab-text-color-active);
     }
   }
 }
