--- a/packages/yoroi-extension/app/components/profile/uri-prompt/UriPromptForm.scss
+++ b/packages/yoroi-extension/app/components/profile/uri-prompt/UriPromptForm.scss
@@ -1,5 +1,5 @@
 .component {
-  padding-top: 122px;
+  padding-top: 60px;
   display: flex;
   height: 100%;
   justify-content: center;
@@ -15,6 +15,10 @@
     color: var(--cmn-default-color-grey);
     font-size: 14px;
     line-height: 22px;
+    p {
+      display: block;
+      margin-bottom: 8px;
+    }
   }
 
   .aboutSvg {
