--- a/packages/yoroi-extension/app/components/topbar/SidebarRevamp.scss
+++ b/packages/yoroi-extension/app/components/topbar/SidebarRevamp.scss
@@ -7,10 +7,22 @@
 }
 
 .header {
-  margin: 0 30px 28px;
-  padding: 30px 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-
+  padding: 32px 28px;
+  margin-bottom: 28px;
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 24px;
+    height: 1px;
+    bottom: 0;
+    background: rgba(255, 255, 255, 0.5);
+  }
+  & svg {
+    transform: scale(0.9);
+  }
   & svg > path {
     fill: var(--theme-sidebar-icon-color);
   }
@@ -20,4 +32,17 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  & > *:nth-child(5) {
+    position: relative;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+  }
+  & > *:nth-child(5)::after {
+    content: '';
+    position: absolute;
+    width: 24px;
+    height: 1px;
+    bottom: -8px;
+    background: rgba(255, 255, 255, 0.5);
+  }
 }
