fix gradient background color sidebar

--- a/packages/yoroi-extension/app/components/topbar/SidebarRevamp.scss
+++ b/packages/yoroi-extension/app/components/topbar/SidebarRevamp.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: var(--theme-sidebar-background-color);
+  background: linear-gradient(30.09deg, #244abf 0%, #4760ff 100%);
 }
 
 .header {
